fixed title scale on safari

--- a/src/app.scss
+++ b/src/app.scss
@@ -19,6 +19,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	transform-origin: center;
 	transition: transform 0.2s ease;
 	font-size: 37px;
 	user-select: none;
@@ -26,12 +27,15 @@
 
 	&.fade-out {
 		transform: translate(-50%, -50%) scale(0);
+		-webkit-transform: translate(-50%, -50%) scale(0, 0);
 	}
 
 	&--winner {
 		transform: translate(-50%, -50%) scale(0);
+		-webkit-transform: translate(-50%, -50%) scale(0, 0);
 	}
 	&.fade-in {
 		transform: translate(-50%, -50%) scale(1);
+		-webkit-transform: translate(-50%, -50%) scale(1, 1);
 	}
 }
